[gd_scene load_steps=4 format=3 uid="uid://bpleojmnin7cf"]

[ext_resource type="Script" uid="uid://yqk3op0wjibi" path="res://Entities/Enemy/Bats/bat_spawner.gd" id="1_2y65o"]
[ext_resource type="Texture2D" uid="uid://ckjarthn0wi1n" path="res://Entities/Enemy/Bats/Batcave.png" id="2_ogx7l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jbqu3"]
radius = 866.305

[node name="BatSpawner" type="Node2D"]
script = ExtResource("1_2y65o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ogx7l")

[node name="SpawnRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnRange"]
shape = SubResource("CircleShape2D_jbqu3")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="SpawnRange" to="." method="_on_spawn_range_body_entered"]
[connection signal="body_exited" from="SpawnRange" to="." method="_on_spawn_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
